manifests/envs/movie-dev/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rs-movie-dev-ns
  labels:
    istio-injection: enabled
