manifests/envs/movie-dev/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: front-gateway
spec:
  selector:
    istio: ingressgateway-movie-dev
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
